--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
+    "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -50,12 +52,17 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "redux-devtools": "^3.5.0",
+    "redux-saga": "^1.0.0",
+    "reselect": "^4.0.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "typed-css-modules": "^0.3.7",
+    "typesafe-actions": "^3.0.0",
     "typescript": "3.2.4",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "1.1.1",
