--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
     "@types/classnames": "^2.2.7",
+    "@types/express": "^4.16.1",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.18",
     "@types/react": "16.7.20",
@@ -61,7 +62,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
-    "typed-css-modules": "^0.3.7",
+    "typed-css-modules": "^0.4.2",
     "typesafe-actions": "^3.0.0",
     "typescript": "3.2.4",
     "typings-for-css-modules-loader": "^1.7.0",
