--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
+    "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.7",
     "@types/express": "^4.16.1",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.18",
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
+    "@types/react-helmet": "^5.0.8",
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
@@ -23,6 +25,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "cheerio": "^1.0.0-rc.2",
     "classnames": "^2.2.6",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
@@ -34,6 +37,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
+    "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
@@ -43,6 +47,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "nodemon": "^1.18.10",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -53,6 +58,9 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.7",
+    "react-gtm-module": "^2.0.4",
+    "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux-devtools": "^3.5.0",
@@ -73,6 +81,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
+    "ssr": "tsc --p ./tsconfig-prod.json",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
@@ -132,5 +141,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.1.0"
   }
 }
