--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "preserve"
+    "noEmit": false,
+    "jsx": "preserve",
+    "outDir": "./ssr"
   },
+  "outDir": "./ssr",
   "include": [
     "src"
   ]
