--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.17.0",
+    "prettier-tslint": "^0.4.2",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
