--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-favicon": "^0.0.16",
     "react-ga": "^2.5.7",
     "react-gtm-module": "^2.0.4",
     "react-helmet": "^5.2.0",
