--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-named-asset-import": "^0.3.0",
+    "babel-plugin-remove-webpack": "^1.1.0",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -91,7 +93,9 @@
     "ssr": "tsc --p ./tsconfig-prod.json",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:ssr": "node scripts/ssr.js",
     "test": "node scripts/test.js",
+    "ssr-base": "node scripts/ssr.js",
     "build:style-typings": "node scripts/style-typings.js"
   },
   "eslintConfig": {
@@ -138,14 +142,15 @@
       "node"
     ]
   },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "webpack-bundle-analyzer": "^3.1.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
