Redux sagas hooked up with SSR render calls

--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
     "@svgr/webpack": "2.4.1",
+    "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.7",
     "@types/express": "^4.16.1",
-    "@types/jest": "^25.1.0",
-    "@types/node": "^13.7.0",
-    "@types/ramda": "^0.26.1",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-helmet": "^5.0.0",
-    "@types/react-redux": "^7.0.0",
-    "@types/react-router": "^5.1.0",
+    "@types/jest": "23.3.13",
+    "@types/node": "10.12.18",
+    "@types/ramda": "^0.26.36",
+    "@types/react": "16.7.20",
+    "@types/react-dom": "16.0.11",
+    "@types/react-helmet": "^5.0.8",
+    "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
@@ -35,9 +35,6 @@
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-plugin-remove-webpack": "^1.1.0",
     "babel-preset-react-app": "^7.0.0",
-    "bfj": "^7.0.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "3.0.0",
     "css-loader": "1.0.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -54,83 +51,87 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "html-webpack-plugin": "4.0.0-beta.11",
     "jest": "^24.8.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
-    "mini-css-extract-plugin": "0.4.3",
-    "nodemon": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.19.0",
+    "prettier": "^1.17.1",
     "prettier-tslint": "^0.4.2",
     "pretty-quick": "^1.10.0",
-    "react-dev-utils": "^7.0.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
-    "terser-webpack-plugin": "2.3.0",
+    "terser-webpack-plugin": "1.1.0",
     "typed-css-modules": "^0.4.2",
     "typesafe-actions": "^3.0.0",
     "typescript": "^3.8.0",
     "typings-for-css-modules-loader": "^1.7.0",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.0",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-dev-server": "^3.10.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "workbox-webpack-plugin": "^3.6.0"
+    "url-loader": "1.1.1",
+    "webpack": "4.19.1",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-dev-server": "3.1.14",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "3.6.3"
   },
   "dependencies": {
-    "@types/colors": "^1.2.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/moment": "^2.13.0",
     "@types/react-router-redux": "^5.0.18",
+    "@types/reselect": "^2.2.0",
     "@types/webpack": "^4.41.7",
     "@types/webpack-dev-middleware": "^3.7.0",
     "@types/webpack-hot-middleware": "^2.25.0",
-    "axios": "^0.19.0",
-    "browser-refresh": "^1.7.3",
-    "classnames": "^2.2.0",
-    "colors": "^1.4.0",
+    "axios": "^0.18.0",
+    "bfj": "6.1.1",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "classnames": "^2.2.6",
     "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.0",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
+    "dotenv": "6.0.0",
+    "dotenv-expand": "4.2.0",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
-    "history": "^4.10.1",
-    "husky": "^4.2.0",
+    "html-webpack-plugin": "4.0.0-alpha.2",
+    "husky": "^2.2.0",
     "identity-obj-proxy": "3.0.0",
+    "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.24.0",
-    "ramda": "^0.26.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-ga": "^2.5.7",
-    "react-gtm-module": "^2.0.0",
+    "nodemon": "^1.18.10",
+    "ramda": "^0.26.1",
+    "react": "^16.7.0",
+    "react-app-polyfill": "^0.2.0",
+    "react-dev-utils": "^7.0.1",
+    "react-dom": "^16.7.0",
+    "react-gtm-module": "^2.0.4",
     "react-helmet": "^5.2.0",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.0",
+    "react-hot-loader": "^4.12.19",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^5.1.0",
     "react-router-redux": "^4.0.8",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.0",
+    "redux-saga-requests": "^0.26.1",
     "redux-saga-requests-graphql": "^0.2.0",
     "reselect": "^4.0.0",
-    "resolve": "^1.15.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-hot-middleware": "^2.25.0"
+    "resolve": "1.8.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
+    "cleanup": "rimraf dist/",
+    "build": "echo \"Will be implemented\"",
     "start": "node scripts/start-client.js",
-    "test": "node scripts/test-client.js",
-    "build:client": "node scripts/build-client.js",
-    "build:server": "node scripts/build-server.js",
-    "run-dev-ssr": "cross-env NODE_ENV=production webpack --config ./config/webpack-server.config.js --mode=development & browser-refresh dist/server.js",
+    "test": "node scripts/test.js",
     "build:server": "node scripts/build-server.js",
     "build:style-typings": "node scripts/style-typings.js"
   },
