--- a/package.json
+++ b/package.json
@@ -4,118 +4,123 @@
   "private": true,
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-do-expressions": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-proposal-partial-application": "^7.8.3",
+    "@babel/plugin-proposal-pipeline-operator": "^7.8.3",
+    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
     "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "@hot-loader/react-dom": "^16.12.0",
     "@svgr/webpack": "2.4.1",
+    "@types/aws-lambda": "^8.10.46",
     "@types/cheerio": "^0.22.11",
-    "@types/classnames": "^2.2.7",
-    "@types/express": "^4.16.1",
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.18",
-    "@types/ramda": "^0.26.36",
-    "@types/react": "16.7.20",
-    "@types/react-dom": "16.0.11",
+    "@types/classnames": "^2.2.8",
+    "@types/express": "^4.17.0",
+    "@types/helmet": "^0.0.43",
+    "@types/jest": "^24.0.13",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^12.0.8",
+    "@types/ramda": "^0.26.9",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
-    "@types/react-redux": "^7.0.1",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-router": "^5.0.1",
+    "@types/react-router-config": "^5.0.0",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux-actions": "^2.6.1",
+    "@types/redux-mock-store": "^1.0.1",
+    "@types/reselect": "^2.2.0",
+    "@types/serialize-javascript": "^1.5.0",
+    "@types/source-map-support": "^0.5.1",
+    "@types/webpack": "^4.41.7",
+    "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack-env": "^1.13.9",
+    "@types/webpack-hot-middleware": "^2.16.5",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
-    "babel-eslint": "^10.0.0",
-    "babel-jest": "^24.0.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-plugin-istanbul": "^4.1.6",
+    "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-named-asset-import": "^0.3.0",
-    "babel-plugin-remove-webpack": "^1.1.0",
-    "babel-preset-react-app": "^7.0.0",
-    "css-loader": "1.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-config-react-app": "^3.0.6",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-cypress": "^2.6.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "^20.0.3",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "circular-dependency-plugin": "^5.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.0.0",
+    "cz-customizable": "^6.2.0",
+    "file-loader": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.5",
+    "glob": "^7.1.4",
+    "husky": "^2.4.0",
+    "identity-obj-proxy": "^3.0.0",
+    "isomorphic-style-loader": "^5.1.0",
     "jest": "^24.8.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.3.1",
-    "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.17.1",
-    "prettier-tslint": "^0.4.2",
-    "pretty-quick": "^1.10.0",
-    "sass-loader": "7.1.0",
-    "serverless": "^1.65.0",
-    "serverless-finch": "^2.5.2",
-    "serverless-offline": "^5.12.1",
-    "serverless-s3-local": "^0.5.4",
-    "source-map-support": "^0.5.16",
-    "style-loader": "0.23.0",
-    "terser-webpack-plugin": "1.1.0",
-    "typed-css-modules": "^0.4.2",
-    "typesafe-actions": "^3.0.0",
-    "typescript": "^3.8.0",
-    "typings-for-css-modules-loader": "^1.7.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.42.0",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "lint-staged": "^8.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "parallel-webpack": "^2.4.0",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-media-variables": "^2.0.1",
+    "postcss-preset-env": "^6.6.0",
+    "prettier": "^1.18.2",
+    "redux-devtools-extension": "2.13.8",
+    "redux-mock-store": "^1.5.3",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.1.0",
+    "source-map-explorer": "^2.0.0",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.17.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2",
+    "webpackbar": "^3.2.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@types/aws-lambda": "^8.10.46",
-    "@types/moment": "^2.13.0",
-    "@types/react-router-redux": "^5.0.18",
-    "@types/reselect": "^2.2.0",
-    "@types/webpack": "^4.41.7",
-    "@types/webpack-dev-middleware": "^3.7.0",
-    "@types/webpack-hot-middleware": "^2.25.0",
-    "aws-lambda": "^1.0.5",
-    "axios": "^0.18.0",
-    "bfj": "^7.0.2",
-    "cache-loader": "^4.1.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.7.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.6.4",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "eslint": "^6.8.0",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
-    "html-webpack-plugin": "4.0.0-alpha.2",
     "husky": "^2.2.0",
     "identity-obj-proxy": "3.0.0",
+    "is-object": "^1.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "loader-runner": "^3.1.0",
     "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.24.0",
     "nodemon": "^1.18.10",
+    "nodemon-webpack-plugin": "^4.3.1",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
@@ -131,74 +136,34 @@
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.0",
-    "redux-saga-requests": "^0.26.1",
+    "redux-saga-requests": "^0.2.1",
     "redux-saga-requests-graphql": "^0.2.0",
     "reselect": "^4.0.0",
     "resolve": "1.8.1",
-    "serverless-jest-plugin": "^0.3.0",
-    "serverless-offline-plus-static": "^1.0.4",
-    "serverless-s3-sync": "^1.10.6",
-    "serverless-s3bucket-sync": "^0.1.5",
-    "serverless-webpack": "^5.3.1",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "resolve-url-loader": "^3.1.1",
+    "serverless-aws-static-file-handler": "^2.0.5",
+    "serverless-offline": "^6.4.0",
+    "serverless-s3-deploy": "^0.9.0",
+    "serverless-s3-sync": "^1.14.3",
+    "serverless-webpack": "^5.3.2",
+    "typed-css-modules": "^0.6.3",
+    "typesafe-actions": "^5.1.0",
+    "whatwg-fetch": "2.0.4"
   },
   "scripts": {
     "cleanup": "rimraf dist/",
-    "build": "echo \"Will be implemented\"",
-    "start": "node scripts/start-client.js",
     "test": "node scripts/test.js",
-    "build:server": "node scripts/build-server.js",
-    "build:serverless": "node scripts/build-serverless.js",
-    "build:style-typings": "node scripts/style-typings.js"
-  },
-  "resolutions": {
-    "graceful-fs": "4.2.2"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "resolver": "jest-pnp-resolver",
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
+    "prestart": "rimraf dist",
+    "prebuild": "rimraf dist",
+    "start": "yarn build:style-typings && cross-env NODE_ENV=development PORT=3001 nodemon",
+    "server": "cross-env NODE_ENV=production PORT=8081 node dist/index.js",
+    "build": "npm-run-all build:*",
+    "build:style-typings": "node webpack/style-typings.js",
+    "build:client": "cross-env NODE_ENV=production TARGET=client webpack",
+    "build:server": "cross-env NODE_ENV=production TARGET=server webpack",
+    "test:types": "tsc --noEmit",
+    "lint": "yarn build:style-typings && tslint --project .",
+    "lint:fix": "yarn build:style-typings && tslint --fix --project ."
   },
   "browserslist": [
     ">0.2%",
