--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,39 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": [
-      "dom",
-      "es6",
-      "dom.iterable",
-      "esnext"
-    ],
-    "noImplicitAny": false,
-    "allowJs": true,
+    "outDir": "dist",
+    "module": "commonjs",
+    "target": "es5",
+    "lib": ["dom", "es2018"],
+    "baseUrl": "src",
+    "paths": {
+      "@client/*": ["client/*"],
+      "@server/*": ["server/*"],
+      "@core/*": ["core/*"],
+      "@web/*": ["web/*"]
+    },
     "skipLibCheck": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": false,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": false,
-    "jsx": "preserve",
-    "inlineSourceMap": true,
-    "inlineSources": true
+    "typeRoots": [
+      "./typings",
+      "node_modules/@types"
+		]
   },
-  "include": [
-    "src"
+  "exclude": [
+    "node_modules",
+    "webpack", 
+    "typings",
+    "dist"
   ]
 }
