--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
+    "@babel/runtime": "^7.10.2",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@hot-loader/react-dom": "^16.12.0",
@@ -61,6 +61,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cz-customizable": "^6.2.0",
+    "eslint": "^6.8.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "glob": "^7.1.4",
@@ -74,7 +75,7 @@
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "parallel-webpack": "^2.4.0",
+    "parallel-webpack": "^2.6.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -85,6 +86,11 @@
     "redux-mock-store": "^1.5.3",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
+    "serverless-aws-static-file-handler": "^2.0.5",
+    "serverless-offline": "^6.4.0",
+    "serverless-s3-deploy": "^0.9.0",
+    "serverless-s3-sync": "^1.14.3",
+    "serverless-webpack": "^5.3.2",
     "source-map-explorer": "^2.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
@@ -92,7 +98,7 @@
     "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.1",
-    "webpack": "^4.42.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
@@ -103,52 +109,38 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
+    "before-build-webpack": "^0.2.9",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.7.0",
     "core-js": "^3.6.4",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^6.8.0",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
     "husky": "^2.2.0",
-    "identity-obj-proxy": "3.0.0",
-    "is-object": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
-    "loader-runner": "^3.1.0",
-    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nodemon": "^1.18.10",
     "nodemon-webpack-plugin": "^4.3.1",
     "ramda": "^0.26.1",
-    "react": "^16.7.0",
-    "react-app-polyfill": "^0.2.0",
-    "react-dev-utils": "^7.0.1",
-    "react-dom": "^16.7.0",
-    "react-gtm-module": "^2.0.4",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.12.19",
-    "react-loadable": "^5.5.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^5.1.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-gtm-module": "^2.0.8",
+    "react-helmet": "^6.0.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.0",
+    "redux-saga": "^1.1.3",
     "redux-saga-requests": "^0.2.1",
     "redux-saga-requests-graphql": "^0.2.0",
     "reselect": "^4.0.0",
-    "resolve": "1.8.1",
+    "resolve": "^1.17.0",
     "resolve-url-loader": "^3.1.1",
-    "serverless-aws-static-file-handler": "^2.0.5",
-    "serverless-offline": "^6.4.0",
-    "serverless-s3-deploy": "^0.9.0",
-    "serverless-s3-sync": "^1.14.3",
-    "serverless-webpack": "^5.3.2",
+    "serverless-functions-base-path": "^1.0.32",
+    "serverless-offline-plus-static": "^1.0.4",
     "typed-css-modules": "^0.6.3",
-    "typesafe-actions": "^5.1.0",
-    "whatwg-fetch": "2.0.4"
+    "typesafe-actions": "^5.1.0"
   },
   "scripts": {
     "cleanup": "rimraf dist/",
@@ -159,8 +151,13 @@
     "server": "cross-env NODE_ENV=production PORT=8081 node dist/index.js",
     "build": "npm-run-all build:*",
     "build:style-typings": "node webpack/style-typings.js",
-    "build:client": "cross-env NODE_ENV=production TARGET=client webpack",
-    "build:server": "cross-env NODE_ENV=production TARGET=server webpack",
+    "build:client": "cross-env TARGET=client NODE_ENV=development webpack",
+    "build:server": "cross-env TARGET=server NODE_ENV=development webpack",
+    "build:serverless": "cross-env TARGET=serverless NODE_ENV=development webpack",
+    "build:client:prod": "cross-env TARGET=client NODE_ENV=production webpack",
+    "build:server:prod": "cross-env TARGET=server NODE_ENV=production webpack",
+    "build:serverless:prod": "cross-env TARGET=serverless NODE_ENV=production webpack",
+    "build:parallel": "parallel-webpack --config=./webpack/serverless/index.js",
     "test:types": "tsc --noEmit",
     "lint": "yarn build:style-typings && tslint --project .",
     "lint:fix": "yarn build:style-typings && tslint --fix --project ."
