SSR build tweaks and updates

--- a/package.json
+++ b/package.json
@@ -149,16 +149,14 @@
     "prebuild": "rimraf dist",
     "start": "yarn build:style-typings && cross-env NODE_ENV=development PORT=3001 nodemon",
     "server": "cross-env NODE_ENV=production PORT=8081 node dist/index.js",
-    "build": "npm-run-all build:*",
-    "build:style-typings": "node webpack/style-typings.js",
-    "build:client": "cross-env TARGET=client NODE_ENV=development webpack",
-    "build:server": "cross-env TARGET=server NODE_ENV=development webpack",
-    "build:serverless": "cross-env TARGET=serverless NODE_ENV=development webpack",
-    "build:client:prod": "cross-env TARGET=client NODE_ENV=production webpack",
-    "build:server:prod": "cross-env TARGET=server NODE_ENV=production webpack",
-    "build:serverless:prod": "cross-env TARGET=serverless NODE_ENV=production webpack",
-    "build:parallel": "parallel-webpack --config=./webpack/serverless/index.js",
+    "build:dev": "npm-run-all build:dev:*",
+    "build:prod": "npm-run-all build:prod:*",
+    "build:dev:client": "cross-env TARGET=client NODE_ENV=development webpack",
+    "build:dev:server": "cross-env TARGET=server NODE_ENV=development webpack",
+    "build:prod:client": "cross-env TARGET=client NODE_ENV=production webpack",
+    "build:prod:server": "cross-env TARGET=server NODE_ENV=production webpack",
     "test:types": "tsc --noEmit",
+    "build:style-typings": "node webpack/style-typings.js",
     "lint": "yarn build:style-typings && tslint --project .",
     "lint:fix": "yarn build:style-typings && tslint --fix --project ."
   },
