--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Node CI
 
-on: [push]
+on:
+  push:
+    branches-ignore:
+      - 'master'
 
 jobs:
   build:
@@ -14,10 +17,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: yarn install, build, and test
-      run: |
-        yarn install
-        yarn build:prod
+    - name: yarn install
+      run: yarn install
+    - name: yarn build:dev
+      run: yarn build:dev
+    - name: yarn build:prod
+      run: yarn build:prod
       env:
         CI: true
 
