--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,3 +45,14 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: alexbrown201/fandanzle-v2
         tags: latest
+
+    - name: ls -a via ssh
+      uses: fifsky/ssh-action@master
+      with:
+        command: |
+          docker kill fandanzle-v2
+          docker pull alexbrown201/fandanzle-v2:latest
+          docker run -it -p 3000:3000 --name fandanzle-v2 alexbrown201/fandanzle-v2
+        host: ${{ secrets.HOST }}
+        user: root
+        key: ${{ secrets.PRIVATE_KEY}}
