--- a/package.json
+++ b/package.json
@@ -109,10 +109,15 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "before-build-webpack": "^0.2.9",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.7.0",
     "core-js": "^3.6.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
