--- a/package.json
+++ b/package.json
@@ -53,15 +53,15 @@
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-env": "^1.13.9",
     "@types/webpack-hot-middleware": "^2.16.5",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "circular-dependency-plugin": "^5.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cz-customizable": "^6.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.7.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "glob": "^7.1.4",
@@ -81,7 +81,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-media-variables": "^2.0.1",
     "postcss-preset-env": "^6.6.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.1.1",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "^1.5.3",
     "resolve-url-loader": "^3.1.0",
@@ -118,6 +118,9 @@
     "core-js": "^3.6.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
@@ -128,6 +131,7 @@
     "nodemon-webpack-plugin": "^4.3.1",
     "ramda": "^0.26.1",
     "react": "^16.13.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.0",
     "react-gtm-module": "^2.0.8",
     "react-helmet": "^6.0.0",
@@ -162,8 +166,8 @@
     "build:prod:server": "cross-env TARGET=server NODE_ENV=production webpack",
     "test:types": "tsc --noEmit",
     "build:style-typings": "node webpack/style-typings.js",
-    "lint": "yarn build:style-typings && tslint --project .",
-    "lint:fix": "yarn build:style-typings && tslint --fix --project ."
+    "lint": "yarn build:style-typings && eslint . --ext .ts",
+    "lint:fix": "yarn build:style-typings && eslint . --ext .ts --fix"
   },
   "browserslist": [
     ">0.2%",
