--- a/package.json
+++ b/package.json
@@ -2,6 +2,32 @@
   "name": "fandanzle-v2",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "cleanup": "rimraf dist/",
+    "test": "jest",
+    "prestart": "rimraf dist",
+    "prebuild": "rimraf dist",
+    "start:devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
+    "start:sls": "yarn start:sls:dev",
+    "start:sls:dev-offline": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn start:devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
+    "start:sls:prod-offline": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && yarn build:sls:prod && concurrently -r --kill-others \"yarn start:http\" \"yarn \"",
+    "start:sls:dev": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn start:devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=development\"",
+    "start:sls:prod": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development yarn cleanup && yarn build:style-typings && yarn build:sls:prod && concurrently -r --kill-others \"yarn start:http\" \"yarn \"",
+    "start:http": "http-server ./dist -p 9000",
+    "build:client:dev": "yarn cleanup && cross-env NODE_ENV=development TARGET=client webpack",
+    "build:client:prod": "yarn cleanup && cross-env NODE_ENV=production TARGET=client webpack",
+    "build:sls:dev": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=serverless webpack",
+    "build:sls:prod": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=serverless webpack",
+    "deploy:sls:development": "yarn build:sls:dev && serverless deploy -v --stage development",
+    "deploy:sls:staging": "yarn build:sls:prod && serverless deploy -v --stage staging",
+    "deploy:sls:production": "yarn build:sls:prod && serverless deploy -v --stage production",
+    "test:types": "tsc --noEmit",
+    "hook:before:offline:start": "yarn build:client:prod",
+    "build:style-typings": "node webpack/style-typings.js",
+    "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
+    "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
+    "types": "graphql-codegen --config codegen.yml"
+  },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.4.5",
@@ -15,6 +41,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/plugin-proposal-partial-application": "^7.8.3",
     "@babel/plugin-proposal-pipeline-operator": "^7.8.3",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/plugin-transform-react-inline-elements": "^7.2.0",
     "@babel/plugin-transform-regenerator": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
@@ -22,7 +49,6 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.10.2",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@hot-loader/react-dom": "^16.12.0",
@@ -30,6 +56,8 @@
     "@types/aws-lambda": "^8.10.46",
     "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.8",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.0",
     "@types/helmet": "^0.0.43",
     "@types/jest": "^24.0.13",
@@ -55,6 +83,7 @@
     "@types/webpack-hot-middleware": "^2.16.5",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "aws-sdk": "^2.824.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "circular-dependency-plugin": "^5.0.2",
@@ -86,10 +115,22 @@
     "redux-mock-store": "^1.5.3",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
-    "serverless-aws-static-file-handler": "^2.0.5",
-    "serverless-offline": "^6.4.0",
-    "serverless-s3-deploy": "^0.9.0",
-    "serverless-s3-sync": "^1.14.3",
+    "serverless": "^1.60.1",
+    "serverless-deployment-bucket": "^1.3.0",
+    "serverless-domain-manager": "^3.3.0",
+    "serverless-dynamodb-local": "^0.2.38",
+    "serverless-offline": "^5.12.1",
+    "serverless-offline-scheduler": "^0.3.8",
+    "serverless-offline-sns": "^0.68.0",
+    "serverless-plugin-git-variables": "^4.0.0",
+    "serverless-plugin-graphiql": "^0.4.0",
+    "serverless-plugin-log-subscription": "^1.2.0",
+    "serverless-plugin-static": "0.0.4",
+    "serverless-plugin-tracing": "^2.0.0",
+    "serverless-plugin-typescript": "^1.1.9",
+    "serverless-prune-plugin": "^1.4.3",
+    "serverless-s3-local": "^0.6.7",
+    "serverless-s3-sync": "^1.15.0",
     "serverless-webpack": "^5.3.2",
     "source-map-explorer": "^2.0.0",
     "style-loader": "^0.23.1",
@@ -106,12 +147,12 @@
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^3.2.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^4.3.1",
+    "serverless-functions-base-path": "^1.0.32",
+    "serverless-offline-plus-static": "^1.0.4"
   },
   "dependencies": {
-    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@babel/runtime": "^7.12.5",
     "before-build-webpack": "^0.2.9",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.7.0",
@@ -146,28 +187,8 @@
     "reselect": "^4.0.0",
     "resolve": "^1.17.0",
     "resolve-url-loader": "^3.1.1",
-    "serverless-functions-base-path": "^1.0.32",
-    "serverless-offline-plus-static": "^1.0.4",
     "typed-css-modules": "^0.6.3",
     "typesafe-actions": "^5.1.0"
-  },
-  "scripts": {
-    "cleanup": "rimraf dist/",
-    "test": "jest",
-    "prestart": "rimraf dist",
-    "prebuild": "rimraf dist",
-    "start": "yarn build:style-typings && cross-env NODE_ENV=development PORT=3001 nodemon",
-    "server": "cross-env NODE_ENV=production PORT=8081 node dist/index.js",
-    "build:dev": "npm-run-all build:dev:*",
-    "build:prod": "npm-run-all build:prod:*",
-    "build:dev:client": "cross-env TARGET=client NODE_ENV=development webpack",
-    "build:dev:server": "cross-env TARGET=server NODE_ENV=development webpack",
-    "build:prod:client": "cross-env TARGET=client NODE_ENV=production webpack",
-    "build:prod:server": "cross-env TARGET=server NODE_ENV=production webpack",
-    "test:types": "tsc --noEmit",
-    "build:style-typings": "node webpack/style-typings.js",
-    "lint": "yarn build:style-typings && eslint . --ext .ts",
-    "lint:fix": "yarn build:style-typings && eslint . --ext .ts --fix"
   },
   "browserslist": [
     ">0.2%",
