--- a/package.json
+++ b/package.json
@@ -7,45 +7,139 @@
     "test": "jest",
     "prestart": "rimraf dist",
     "prebuild": "rimraf dist",
-    "devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
-    "prodserver": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
-    "dev": "NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
-    "prod": "NODE_ENV=production IS_LOCAL=TRUE NODE_CONFIG_ENV=production-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn build:prod\" \"yarn prodserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-production\"",
-    "build:client:dev": "yarn cleanup && cross-env NODE_ENV=development TARGET=client webpack",
-    "build:client:prod": "yarn cleanup && cross-env NODE_ENV=production TARGET=client webpack",
-    "build:dev": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=serverless webpack",
-    "build:prod": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=serverless webpack",
+
+    "start": "sls offline start",
+    "devserver": "NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
+    "prodserver": "NODE_ENV=production TARGET=client webpack serve  --mode production",
+
+    "build:client": "TARGET=client webpack",
+    "build:server": "TARGET=serverless webpack",
+    "build:server:prod": "NODE_ENV=production TARGET=serverless webpack",
+    "build": "yarn build:client && yarn build:server",
+
+    "build:dev": "yarn cleanup && NODE_ENV=development yarn build:client && yarn build:server",
+    "build:prod": "yarn cleanup && NODE_ENV=production yarn build:client && NODE_ENV=production yarn build:server",
+
+    "dev": "yarn cleanup && yarn types && yarn build:dev && NODE_ENV=development NODE_CONFIG_ENV=development-local concurrently -r \"yarn devserver\" \"sls offline start --noPrependStageInUrl\"",
+    "prod": "yarn cleanup && yarn types && yarn build:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"yarn prodserver\" \"sls offline start --noPrependStageInUrl\"",
+   
     "deploy:dev": "yarn build:dev && serverless deploy -v --stage development",
     "deploy:staging": "yarn build:prod && serverless deploy -v --stage staging",
     "deploy:prod": "yarn build:prod && serverless deploy -v --stage production",
+
     "test:types": "tsc --noEmit",
     "hook:before:offline:start": "yarn build:client:prod",
     "build:style-typings": "node webpack/style-typings.js",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
     "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
-    "types": "graphql-codegen --config codegen.yml"
+
+    "types": "tcm src"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-do-expressions": "^7.8.3",
-    "@babel/plugin-proposal-export-default-from": "^7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/plugin-proposal-partial-application": "^7.8.3",
-    "@babel/plugin-proposal-pipeline-operator": "^7.8.3",
-    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
-    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
-    "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/register": "^7.0.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-dev-middleware": "^4.0.2",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "webpack-dev-server": "^3.11.1",
+    "workbox-webpack-plugin": "^6.0.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "@babel/preset-typescript": "^7.12.7",
+    "babel-plugin-graphql-tag": "^2.5.0",
+    "process": "0.11.10",
+    "typescript": "^4.1.3",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-proposal-do-expressions": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-function-bind": "^7.12.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-regenerator": "^7.12.1",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@babel/plugin-proposal-partial-application": "^7.12.1",
+    "@babel/plugin-proposal-throw-expressions": "^7.12.1",
+    "@babel/plugin-proposal-pipeline-operator": "^7.12.1",
+    "@babel/plugin-transform-react-inline-elements": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
+    "assets-webpack-plugin": "^7.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "webpack": "^5.11.0",
+    "speed-measure-webpack-plugin": "1.3.3",
+    "thread-loader": "^3.0.1",
+    "cache-loader": "^4.1.0",
+    "image-webpack-loader": "^7.0.0",
+    "koa-webpack": "^6.0.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^4.3.1",
+    "webpack-merge": "^4.2.1",
+    "webpackbar": "^4.0.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "autoprefixer": "^7.1.6",
+    "babel-eslint": "^10.0.0",
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-istanbul": "^4.1.6",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "cross-env": "^4.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "^0.12.0",
+    "eslint-plugin-cypress": "^2.8.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "file-loader": "^3.0.1",
+    "fs": "^0.0.1-security",
+    "got": "^7.1.0",
+    "husky": "^3.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "ignore-styles": "^5.0.1",
+    "isomorphic-style-loader": "v3.0.0",
+    "istanbul": "^0.4.5",
+    "istanbul-reports": "^1.3.0",
+    "jest": "^24.0.0",
+    "jest-each": "^24.0.0",
+    "jsdom": "^11.11.0",
+    "lerna": "^3.4.0",
+    "lint-staged": "^8.1.5",
+    "madge": "^3.4.4",
+    "prettier": "^1.18.2",
+    "react-test-renderer": "^16.4.1",
+    "redux-devtools-extension": "^2.13.0",
+    "rimraf": "^2.6.2",
+    "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-prettier": "^1.1.1",
+    "stylelint-scss": "^3.9.0",
+    "whybundled": "^1.4.2",
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss-loader": "^4.1.0",
+    "buffer": "^6.0.0",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.14.0",
+    "webpack-manifest-plugin": "^3.0.0",
+    "circular-dependency-plugin": "^5.2.2",
+    "react-hot-loader": "^4.13.0",
+    "resolve-url-loader": "^3.1.2",
+    "babel-plugin-root-import": "^6.6.0",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@hot-loader/react-dom": "^16.12.0",
@@ -81,37 +175,17 @@
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "aws-sdk": "^2.824.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "circular-dependency-plugin": "^5.0.2",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
     "cz-customizable": "^6.2.0",
-    "eslint": "^7.7.0",
-    "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "glob": "^7.1.4",
-    "husky": "^2.4.0",
-    "identity-obj-proxy": "^3.0.0",
-    "isomorphic-style-loader": "^5.1.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "parallel-webpack": "^2.6.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
     "postcss-media-variables": "^2.0.1",
     "postcss-preset-env": "^6.6.0",
-    "prettier": "^2.1.1",
-    "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "^1.5.3",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.1.0",
     "serverless": "^1.60.1",
     "serverless-deployment-bucket": "^1.3.0",
     "serverless-domain-manager": "^3.3.0",
@@ -132,24 +206,20 @@
     "serverless-s3-sync": "^1.15.0",
     "serverless-webpack": "^5.3.2",
     "source-map-explorer": "^2.0.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.5.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
-    "webpackbar": "^3.2.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "@types/redis": "^2.8.28",
+    "concurrently": "^4.1.0",
+    "extend": "^3.0.1",
+    "http-server": "^0.12.3",
+    "mockdate": "^2.0.2",
+    "picturefill": "^3.0.2"
   },
   "dependencies": {
+    "core-js": "^3.8.2",
+    "regenerator-runtime": "^0.13.3",
     "@babel/runtime": "^7.12.5",
     "aws-serverless-express": "^3.4.0",
     "babel-polyfill": "^6.26.0",
@@ -157,7 +227,6 @@
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "connected-react-router": "^6.7.0",
-    "core-js": "^3.6.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint-config-airbnb": "^18.2.0",
@@ -189,7 +258,7 @@
     "reselect": "^4.0.0",
     "resolve": "^1.17.0",
     "resolve-url-loader": "^3.1.1",
-    "typed-css-modules": "^0.6.3",
+    "typed-css-modules": "^0.6.5",
     "typesafe-actions": "^5.1.0"
   },
   "browserslist": [
