Tweaked guest submission form

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,11 @@
     "prettier"
   ],
   "extends": [
-    "prettier",
+    "plugin:prettier/recommended",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
   ],
   "rules": {
     "no-console": 1,
