--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prebuild": "rimraf dist",
     "devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
     "prodserver": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
-    "dev": "NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
-    "prod": "NODE_ENV=production IS_LOCAL=TRUE NODE_CONFIG_ENV=production-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn build:prod\" \"yarn prodserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-production\"",
+    "dev": "NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local NODE_ENV=development yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
+    "prod": "NODE_ENV=production IS_LOCAL=TRUE NODE_CONFIG_ENV=production-local yarn cleanup && yarn build:style-typings && yarn build:prod && concurrently -r --kill-others \"yarn prodserver\" \"sls offline start --noPrependStageInUrl --stage=production\"",
     "build:client:dev": "yarn cleanup && cross-env NODE_ENV=development TARGET=client webpack",
     "build:client:prod": "yarn cleanup && cross-env NODE_ENV=production TARGET=client webpack",
     "build:dev": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=serverless webpack",
@@ -60,7 +60,6 @@
     "@types/jest": "^24.0.13",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.0.8",
-    "@types/ramda": "^0.26.9",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
@@ -87,7 +86,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cz-customizable": "^6.2.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.31.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "glob": "^7.1.4",
@@ -98,7 +97,6 @@
     "lint-staged": "^8.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "parallel-webpack": "^2.6.0",
@@ -107,7 +105,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-media-variables": "^2.0.1",
     "postcss-preset-env": "^6.6.0",
-    "prettier": "^2.1.1",
+    "prettier": "^2.3.2",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "^1.5.3",
     "resolve-url-loader": "^3.1.0",
@@ -135,9 +133,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.17.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.5.1",
+    "typescript": "^4.3.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-middleware": "^4.0.2",
@@ -147,49 +143,42 @@
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^3.2.0",
-    "workbox-webpack-plugin": "^4.3.1"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.12.5",
-    "aws-serverless-express": "^3.4.0",
-    "babel-polyfill": "^6.26.0",
-    "before-build-webpack": "^0.2.9",
-    "classnames": "^2.2.6",
-    "concurrently": "^5.3.0",
-    "connected-react-router": "^6.7.0",
-    "core-js": "^3.6.4",
+    "workbox-webpack-plugin": "^4.3.1",
+    "resolve": "^1.17.0",
+    "typed-css-modules": "^0.6.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "before-build-webpack": "^0.2.9",
+    "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.14.8",
+    "@vendia/serverless-express": "^4.3.7",
+    "aws-serverless-express": "^3.4.0",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.7.0",
+    "core-js": "^3.6.4",
     "express": "^4.16.4",
-    "file-loader": "2.0.0",
-    "fs-extra": "7.0.0",
-    "husky": "^2.2.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
-    "nodemon": "^1.18.10",
-    "nodemon-webpack-plugin": "^4.3.1",
-    "ramda": "^0.26.1",
-    "react": "^16.13.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-gtm-module": "^2.0.8",
     "react-helmet": "^6.0.0",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-router-redux": "^4.0.8",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-extension": "^2.13.8",
+    "@redux-devtools/core": "^3.9.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-saga-requests": "^0.2.1",
     "redux-saga-requests-graphql": "^0.2.0",
     "reselect": "^4.0.0",
-    "resolve": "^1.17.0",
-    "resolve-url-loader": "^3.1.1",
-    "typed-css-modules": "^0.6.3",
     "typesafe-actions": "^5.1.0"
   },
   "browserslist": [
