--- a/serverless.yml
+++ b/serverless.yml
@@ -46,17 +46,23 @@ package:
     - node_modules/**
     - src/**
 
+  
 provider:
   name: aws
   runtime: nodejs12.x
   timeout: 10 
+  stage: ${opt:stage}
   region: ${opt:region, 'eu-west-2'}
   environment:
-    NODE_ENV: ${self:provider.stage}
+    NODE_ENV: production
+    ITEM: eufhufhrufhrufhiehrgiy
 
 functions:
   server:
     handler: dist/serverless.handler
+    environment:
+      NODE_ENV: production
+      ITEM: HEYHEYHEYHEYEHYHEYHEY
     events:
       - http:
           method: GET
