Updated build process

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "prebuild": "rimraf dist",
     "devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
     "prodserver": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
-    "dev": "NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local NODE_ENV=development yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
-    "prod": "NODE_ENV=production IS_LOCAL=TRUE NODE_CONFIG_ENV=production-local yarn cleanup && yarn build:style-typings && yarn build:prod && concurrently -r --kill-others \"yarn prodserver\" \"sls offline start --noPrependStageInUrl --stage=production\"",
+    "dev": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=development-local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
+    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/server/index.js --watch\" \"wait-on ./dist/server.js && node dist/server.js\"",
+    "prod": "yarn cleanup && yarn build:style-typings && yarn build:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=production-local concurrently -r --kill-others \"yarn prodserver\" \"sls offline start --noPrependStageInUrl --stage=production\"",
     "build:client:dev": "yarn cleanup && cross-env NODE_ENV=development TARGET=client webpack",
     "build:client:prod": "yarn cleanup && cross-env NODE_ENV=production TARGET=client webpack",
     "build:dev": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=serverless webpack",
     "build:prod": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=serverless webpack",
+    "build:dev:pure": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=server webpack",
+    "build:prod:pure": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=server webpack",
     "deploy:dev": "yarn build:dev && serverless deploy -v --stage development",
     "deploy:staging": "yarn build:prod && serverless deploy -v --stage staging",
     "deploy:prod": "yarn build:prod && serverless deploy -v --stage production",
@@ -82,11 +85,19 @@
     "aws-sdk": "^2.824.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
+    "before-build-webpack": "^0.2.9",
     "circular-dependency-plugin": "^5.0.2",
+    "concurrently": "^5.3.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cz-customizable": "^6.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "glob": "^7.1.4",
@@ -108,6 +119,7 @@
     "prettier": "^2.3.2",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "^1.5.3",
+    "resolve": "^1.17.0",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "serverless": "^1.60.1",
@@ -133,6 +145,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "ts-jest": "^24.0.2",
+    "typed-css-modules": "^0.6.3",
     "typescript": "^4.3.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
@@ -144,19 +157,11 @@
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^3.2.0",
     "workbox-webpack-plugin": "^4.3.1",
-    "resolve": "^1.17.0",
-    "typed-css-modules": "^0.6.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "before-build-webpack": "^0.2.9",
-    "concurrently": "^5.3.0"
+    "wait-on": "^6.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.14.8",
+    "@redux-devtools/core": "^3.9.0",
     "@vendia/serverless-express": "^4.3.7",
     "aws-serverless-express": "^3.4.0",
     "babel-polyfill": "^6.26.0",
@@ -173,18 +178,11 @@
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "@redux-devtools/core": "^3.9.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-saga-requests": "^0.2.1",
     "redux-saga-requests-graphql": "^0.2.0",
     "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
