--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
     "prodserver": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
-    "dev": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=development-local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
+    "dev": "yarn cleanup && yarn build:style-typings && yarn build:client:dev && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=development-local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development --aws-profile s3local\"",
     "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/server/index.js --watch\" \"wait-on ./dist/server.js && node dist/server.js\"",
     "prod": "yarn cleanup && yarn build:style-typings && yarn build:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=production-local concurrently -r --kill-others \"yarn prodserver\" \"sls offline start --noPrependStageInUrl --stage=production\"",
     "build:client:dev": "yarn cleanup && cross-env NODE_ENV=development TARGET=client webpack",
@@ -75,16 +75,11 @@
     "@types/reselect": "^2.2.0",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.1",
-    "@types/webpack": "^4.41.7",
-    "@types/webpack-dev-middleware": "^2.0.2",
-    "@types/webpack-env": "^1.13.9",
-    "@types/webpack-hot-middleware": "^2.16.5",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "aws-sdk": "^2.814.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
-    "before-build-webpack": "^0.2.9",
     "circular-dependency-plugin": "^5.0.2",
     "concurrently": "^5.3.0",
     "cross-env": "^5.2.0",
@@ -98,7 +93,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "file-loader": "^4.0.0",
-    "fork-ts-checker-webpack-plugin": "^1.3.5",
     "glob": "^7.1.4",
     "husky": "^2.4.0",
     "identity-obj-proxy": "^3.0.0",
@@ -108,8 +102,6 @@
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "parallel-webpack": "^2.6.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -131,21 +123,29 @@
     "serverless-webpack": "^5.3.2",
     "source-map-explorer": "^2.0.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
     "ts-jest": "^24.0.2",
     "typed-css-modules": "^0.6.3",
     "typescript": "^4.3.5",
     "wait-on": "^6.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.2.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "image-webpack-loader": "^7.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "eslint-import-resolver-webpack": "^0.12.0",
+    "assets-webpack-plugin": "^7.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "webpack": "^5.11.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^4.3.1",
     "webpack-dev-middleware": "^4.0.2",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.1",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.2",
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
-    "webpackbar": "^3.2.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "webpackbar": "^4.0.0",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.14.8",
