--- a/api/package.json
+++ b/api/package.json
@@ -59,6 +59,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "apollo-server-lambda": "^2.9.13",
     "aws-lambda": "^0.1.2",
     "aws-sdk": "^2.620.0",
@@ -66,6 +67,7 @@
     "catbox-memory": "^4.0.1",
     "class-transformer": "0.2.3",
     "class-validator": "0.11.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fp-ts": "^2.10.5",
     "io-ts": "^2.0.2",
