Fixed prouction pure webpack build

--- a/ui/package.json
+++ b/ui/package.json
@@ -9,18 +9,23 @@
     "prebuild": "rimraf dist",
     "start": "sls offline start --noPrependStageInUrl",
     "watch": "nodemon --watch './build' --exec 'sls offline start --noPrependStageInUrl --aws-profile s3local'",
+    "watch:pure": "nodemon --watch './build' --exec 'node dist/server.js'",
     "watch:types": "nodemon --watch './src' --exec 'yarn types'",
     "devclient": "NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodclient": "NODE_ENV=production TARGET=client webpack --watch",
     "devserver": "NODE_ENV=development TARGET=serverless webpack --watch",
     "prodserver": "NODE_ENV=production TARGET=serverless webpack --watch",
+    "puredevserver": "NODE_ENV=development TARGET=server webpack --watch",
+    "pureprodserver": "NODE_ENV=production TARGET=server webpack --watch",
     "build:client": "TARGET=client webpack",
     "build:client:prod": "TARGET=client NODE_ENV=production webpack",
-    "watch:server": "TARGET=serverless webpack --watch",
+    "build:client:pure": "TARGET=client webpack",
+    "build:client:prod:pure": "TARGET=client NODE_ENV=production webpack",
     "build:server": "TARGET=serverless webpack",
     "build:server:prod": "NODE_ENV=production TARGET=serverless webpack",
     "build": "yarn build:client && yarn build:server",
     "build:dev": "yarn cleanup && NODE_ENV=development yarn build:client && yarn build:server",
+    "watch:server": "TARGET=serverless webpack --watch",
     "build:prod": "yarn cleanup && NODE_ENV=production yarn build:client && NODE_ENV=production yarn build:server",
     "dev": "yarn cleanup && yarn types && NODE_ENV=development NODE_CONFIG_ENV=development-local concurrently -r \"yarn devclient\" \"yarn devserver\" \"yarn watch\"",
     "prod": "yarn cleanup && yarn types && yarn build:client:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"yarn prodclient\" \"http-server ./build -p 9000\" \"yarn prodserver\" \"yarn watch\" \"yarn watch:types\"",
@@ -32,11 +37,12 @@
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
     "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
     "types": "tcm src",
-    "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
-    "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
-    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/server/index.js --watch\" \"wait-on ./dist/server.js && node dist/server.js\"",
+    "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
+    "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --mode production",
+    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
+    "prod:pure": "yarn cleanup && yarn build:style-typings && yarn build:client:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=production concurrently -r --kill-others \"yarn prodserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
     "build:dev:pure": "yarn cleanup && cross-env NODE_ENV=development yarn build:client && TARGET=server webpack",
-    "build:prod:pure": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=server webpack --config webpack.config.babel.js --mode production"
+    "build:prod:pure": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=server webpack --mode production"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -238,7 +244,8 @@
     "regenerator-runtime": "^0.13.3",
     "reselect": "^4.0.0",
     "resolve": "^1.17.0",
-    "typesafe-actions": "^5.1.0"
+    "typesafe-actions": "^5.1.0",
+    "wait-on": "^6.0.0"
   },
   "browserslist": [
     ">0.2%",
