--- a/ui/package.json
+++ b/ui/package.json
@@ -29,8 +29,8 @@
     "build:prod": "yarn cleanup && NODE_ENV=production yarn build:client && NODE_ENV=production yarn build:server",
     "dev": "yarn cleanup && yarn types && NODE_ENV=development NODE_CONFIG_ENV=development-local concurrently -r \"yarn devclient\" \"yarn devserver\" \"yarn watch\"",
     "prod": "yarn cleanup && yarn types && yarn build:client:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"yarn prodclient\" \"http-server ./build -p 9000\" \"yarn prodserver\" \"yarn watch\" \"yarn watch:types\"",
-    "deploy:dev": "yarn build:dev && serverless deploy -v --stage development",
-    "deploy:prod": "yarn build:prod && serverless deploy -v --stage production",
+    "deploy:dev": "yarn build:dev && serverless deploy --verbose --stage development",
+    "deploy:prod": "yarn build:prod && serverless deploy --verbose --stage production",
     "test:types": "tsc --noEmit",
     "hook:before:offline:start": "yarn build:client:prod",
     "build:style-typings": "node webpack/style-typings.js",
@@ -74,25 +74,8 @@
     "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.8",
     "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/express": "^4.17.0",
-    "@types/helmet": "^0.0.43",
     "@types/jest": "^24.0.13",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^12.0.8",
-    "@types/ramda": "^0.26.9",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-helmet": "^5.0.8",
-    "@types/react-redux": "^7.0.9",
-    "@types/react-router": "^5.0.1",
-    "@types/react-router-config": "^5.0.0",
-    "@types/react-router-dom": "^4.3.3",
-    "@types/react-router-redux": "^5.0.18",
-    "@types/redis": "^2.8.28",
-    "@types/redux-actions": "^2.6.1",
-    "@types/redux-mock-store": "^1.0.1",
-    "@types/reselect": "^2.2.0",
+    "@types/node": "^14.0.8",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.1",
     "@types/webpack": "^4.41.7",
@@ -162,7 +145,6 @@
     "prettier": "^1.18.2",
     "process": "0.11.10",
     "react-hot-loader": "^4.13.0",
-    "react-snap": "^1.23.0",
     "react-test-renderer": "^16.4.1",
     "redux-devtools-extension": "^2.13.0",
     "redux-mock-store": "^1.5.3",
@@ -226,16 +208,14 @@
     "postcss-assets": "^5.0.0",
     "postcss-simple-vars": "^6.0.3",
     "postcss-url": "^10.1.1",
-    "ramda": "^0.26.1",
-    "react": "^16.13.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.13.0",
-    "react-gtm-module": "^2.0.8",
-    "react-helmet": "^6.0.0",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-router-redux": "^4.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
+    "react-helmet": "6.1.0",
+    "react-hot-loader": "4.13.0",
+    "react-redux": "7.2.6",
+    "react-router-dom": "6.1.1",
+    "react-router-redux": "4.0.8",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
